# templates

cpp/empty-console-project/: CMakeLists.txt
cpp/empty-console-project/src/: main.cpp
generators/: README.md  gen.bat
generators/cli/: class.lua  helpers.lua
generators/cli/templates/: class.cpp  class.h
